Add interal JS files for Angular and Jquery lib

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
         <p>Double-Click to edit a To-Do</p>
         <p>Made by Kanishka Mohan Madhuni</p>        
     </footer>
-    <script src="//code.jquery.com/jquery-3.2.1.min.js" crossorigin="anonymous"></script>
-    <script src="//code.angularjs.org/latest/angular.min.js"></script>
+    <script src="js/lib/jquery.min.js" crossorigin="anonymous"></script>
+    <script src="js/lib/angular.min.js"></script>
     <script src="js/to_do_list_min.js"></script>
 </body>
 
